<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/login"/>

    <com.daniel.android_freshsnap.customview.Email
        android:id="@+id/edt_email"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/corners_outline"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <com.daniel.android_freshsnap.customview.Password
        android:id="@+id/edt_password"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/corners_outline"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/edt_email"
        app:layout_constraintStart_toStartOf="@id/edt_email"
        app:layout_constraintTop_toBottomOf="@id/edt_email" />

    <CheckBox
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/remember"
        android:buttonTint="@color/green_primary"
        app:layout_constraintStart_toStartOf="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="64dp"
        android:textColor="@color/white"
        android:layout_marginTop="73dp"
        android:backgroundTint="@color/green_primary"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_password"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintVertical_bias="0.903">

        <TextView
            android:id="@+id/textBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_regist"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/register"
            android:textColor="@color/green_primary"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>